# c4-mcp

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  app.py  c4_test.py  claude_stdio_server.py  config.example.json  control4_adapter.py  control4_gateway.py  docker-compose.yml  import_test.py  mcp_cli.py  package.json  pyproject.toml  requirements.txt  server.json  session_memory.py
.github/workflows/: ci.yml
docs/: architecture.md  bootstrap_summary.md  context_pack.diff  context_pack.md  project_overview.diff  project_overview.md  prompts.md  save.md
tools/: bootstrap.mjs  discover_controller.py  dump_ui_config_room.py  get_roku_current_app.py  inspect_item.py  introspect_director.py  list_locks.py  run_e2e.py  run_python.mjs  test_paramount_basement.py  trace_unlock.py  validate_alarm.py  validate_claude_stdio.py  validate_http_session_memory.py  validate_listen.py  validate_mcp_e2e.py  validate_mcp_stdio.py  validate_scenes.py  validate_scheduler_toggle.py  validate_shades.py  validate_thermostat_restore.py  watch_lock.py  watch_lock_activity.py
