[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c4-mcp"
version = "0.1.0"
description = "Local Control4 home automation MCP server (MCP tools over HTTP/STDIO)."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "randybritsch" }]
keywords = ["mcp", "model-context-protocol", "control4", "home-automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "flask==3.1.2",
  "flask-mcp-server==0.6.1",
  "pyControl4==1.5.0",
  "aiohttp==3.13.3",
  "requests==2.32.5",
  "async-timeout==3.0.1",
]

[project.urls]
Homepage = "https://github.com/randybritsch/c4-mcp"
Repository = "https://github.com/randybritsch/c4-mcp"

[project.scripts]
c4-mcp = "claude_stdio_server:main"
c4-mcp-http = "app:main"

[tool.setuptools]
py-modules = [
  "app",
  "claude_stdio_server",
  "control4_adapter",
  "control4_gateway",
  "session_memory",
  "mcp_cli",
]
include-package-data = true
